--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@mui/x-data-grid": "^6.19.6",
     "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.6.7",
     "i": "^0.3.7",
