--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.6.7",
     "i": "^0.3.7",
+    "material-ui-audio-player": "^1.7.1",
     "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
